# donatallo

./: .gitmodules  .travis.yml  CMakeLists.txt  README.md
cmake/: FindYamlCpp.cmake
data/scripts/: list-packages.sh
donatallo-cli/: CMakeLists.txt  main.cc
donatallo-qt/: CMakeLists.txt  main.cc  model.cc  model.hh  projectdelegate.cc  projectdelegate.hh
donatallo-qt/resources/: donatallo.desktop
libdonatallo/: CMakeLists.txt  database.cc  database.hh  detector.cc  detector.hh  detectorchain.cc  detectorchain.hh  detectorfactory.cc  detectorfactory.hh  donationmethod.hh  project.cc  project.hh  result.cc  result.hh
libdonatallo/detectors/: alwaysdetector.cc  alwaysdetector.hh  fileinetcdetector.cc  fileinetcdetector.hh  opsysdetector.cc  opsysdetector.hh  packagedetector.cc  packagedetector.hh  unamesdetector.cc  unamesdetector.hh
libdonatallo/util/: processreader.cc  processreader.hh
testdata/testdatabase/: meta.yaml  meta.yml  methods.yaml  testdata.yaml  testdata.yml
tests/: CMakeLists.txt  libdonatallo-test.cc  processreader-test.cc
