PROJECT(Donatallo)

# meta
CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

SET(CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/cmake)

# flags
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")

# libdonatallo
INCLUDE_DIRECTORIES(BEFORE .)

# subdirectories
ADD_SUBDIRECTORY(libdonatallo)

ENABLE_TESTING()
ADD_SUBDIRECTORY(tests)
